--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "AnimatedHeader",
+  "name": "cbp-animated-header-fork",
   "version": "0.0.1",
   "homepage": "https://github.com/codrops/AnimatedHeader",
   "authors": [
     "botelho <http://tympanus.net/codrops>"
   ],
-  "description": "A fixed header that will animate its size on scroll. The inner elements will also adjust their size with a transition.",
+  "description": "Fork from original source to enable bower downloads.",
   "main": "js/cbpAnimatedHeader.min.js",
   "license": "MIT",
   "ignore": [
@@ -17,5 +17,10 @@
   ],
   "dependencies": {
     "classie": ">=1.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/amostajo/AnimatedHeader.git"
+  },
+  "private": false
 }
